fixed scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     transition: var(--transition-delay);
     background-color: var(--background-color);
     color: var(--text-color);
+    overflow: hidden;
 }
 
 body.dark {
